--- a/model/pom.xml
+++ b/model/pom.xml
@@ -8,6 +8,7 @@
         <artifactId>universal-doctor-be</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+    <packaging>jar</packaging>
 
     <artifactId>model</artifactId>
     <dependencies>
@@ -23,6 +24,18 @@
             <version>3.1.0</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.keycloak</groupId>
+            <artifactId>keycloak-admin-client</artifactId>
+            <version>24.0.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
+
 
     </dependencies>
     <properties>
