--- a/pom.xml
+++ b/pom.xml
@@ -16,18 +16,29 @@
 
     <dependencyManagement>
         <dependencies>
+
             <dependency>
                 <groupId>org.postgresql</groupId>
                 <artifactId>postgresql</artifactId>
                 <version>42.7.3</version>
                 <scope>runtime</scope>
             </dependency>
+
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>1.18.30</version>
                 <optional>true</optional>
             </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <type>pom</type>
+                <scope>import</scope>
+                <version>3.1.5</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
