--- a/ms-user/pom.xml
+++ b/ms-user/pom.xml
@@ -3,11 +3,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.0</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>org.universal-doctor</groupId>
+		<artifactId>universal-doctor-be</artifactId>
+		<version>1.0-SNAPSHOT</version>
 	</parent>
+
 	<groupId>org.universal-doctor</groupId>
 	<artifactId>ms-user</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -72,6 +72,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
