--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,13 @@
                 <artifactId>spring-boot-dependencies</artifactId>
                 <type>pom</type>
                 <scope>import</scope>
-                <version>3.1.5</version>
+                <version>3.2.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>1.2.17</version>
             </dependency>
 
         </dependencies>
