--- a/ms-user/src/main/resources/application-dev.properties
+++ b/ms-user/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@
 spring.datasource.url=jdbc:postgresql://80.211.123.141:5432/universal_doctor
 spring.datasource.username=postgres
 spring.datasource.password=twentypostgres
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 keycloak.clientId=auth-server
 keycloak.username=adminrealm
