--- a/ms-user/src/main/resources/application-dev.properties
+++ b/ms-user/src/main/resources/application-dev.properties
@@ -9,3 +9,5 @@ keycloak.username=adminrealm
 keycloak.password=password
 keycloak.grantType=password
 keycloak.credentials.secret=8qhTxZdW647ouB5K6PmSWexhJHaqlOSC
+
+keycloak.url=http://80.211.123.141:8080
